ingress-nginx-monitoring/lessons/013/07-sample-app/deployment-sm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: default
  name: hello-app-deployment
  annotations:
    consul.hashicorp.com/connect-inject: 'true'
  labels:
    app: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      serviceAccountName: hello-app
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
